cargo-features = ["profile-rustflags"]

[package]
name = "dpll"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
env_logger = "0.11.8"
fastrand = "2.3.0"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
log = "0.4.28"
memmap2 = "0.9.9"
stackvector = "1.1.0"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "optbool_from"
harness = false

[[bench]]
name = "optbool_unwrap_or"
harness = false

[profile.perf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rustflags = ["-Ctarget-cpu=native", "-Clink-arg=-fuse-ld=mold"]

[profile.perf_dbg]
inherits = "perf"
debug = true

[profile.flamegraph]
inherits = "perf"
debug = true
strip = false
rustflags = [
    "-Ctarget-cpu=native",
    "-Clink-arg=-fuse-ld=mold",
    "-Clink-arg=-Wl,--no-rosegment",
]
