cargo-features = ["profile-rustflags"]

[workspace]
members = ["pkgs/*"]
resolver = "2"

[workspace.dependencies]
log = "0.4.28"        # logging
nonzero_ext = "0.3.0" # non-zero helpers
criterion = "0.8.0"
fastrand = "2.3.0"

# --- Profiles ---

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rustflags = ["-Ctarget-cpu=native", "-Clink-arg=-fuse-ld=mold"]

[profile.dev]
strip = false
lto = false
debug = true
rustflags = ["-Ctarget-cpu=native", "-Clink-arg=-fuse-ld=mold"]

[profile.flamegraph]
inherits = "release"
debug = true
strip = false
rustflags = [
    "-Ctarget-cpu=native",
    "-Clink-arg=-fuse-ld=mold",
    "-Clink-arg=-Wl,--no-rosegment",
]
